--- a/src/component/Preloading.css
+++ b/src/component/Preloading.css
@@ -83,7 +83,7 @@ body {
       fill : transparent ; 
       stroke-dashoffset : 1800 ; 
       
-    
+    }
     100% { 
       fill : #FAFDFD ; 
       stroke-dashoffset : 0 ;
