--- a/src/component/CSSmag.css
+++ b/src/component/CSSmag.css
@@ -2,6 +2,7 @@
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
   display: none;
   background-size: cover;
+  justify-content: space-between;
 }
 
 .page {
@@ -78,11 +79,7 @@
     color:  hsl(35, 35, 35);
     border: solid 1px hsl(35, 20, 50);
 
-    h2 {
-      text-align: center;
-      padding-top: 50%;
-      font-size: 210%;
-    }
+  
 
     &.page-cover-top {
       box-shadow: inset 0px 0 30px 0px rgba(36, 10, 3, 0.5), -2px 0 5px 2px rgba(0, 0, 0, 0.4);
