--- a/src/component/Cssmag2.css
+++ b/src/component/Cssmag2.css
@@ -4,12 +4,54 @@
 ::before {
 	box-sizing: border-box;
 }
-
-
+h2 {
+	margin-top: 0;
+	margin-bottom: 0.5rem;
+}
+button {
+	border-radius: 50%;
+}
+button:focus {
+	outline: 1px dotted;
+	outline: 5px auto -webkit-focus-ring-color;
+}
+button {
+	margin: 0;
+	font-family: inherit;
+	font-size: inherit;
+	line-height: inherit;
+	border-radius: 50%;
+}
+button {
+	overflow: visible;
+	border-radius: 50%;
+}
+button {
+	text-transform: none;
+	border-radius: 50%;
+}
+[type="button"],
+button {
+	-webkit-appearance: button;
+	border-radius: 50%;
+}
+[type="button"]::-moz-focus-inner,
+button::-moz-focus-inner {
+	padding: 0;
+	border-style: none;
+}
+h2 {
+	margin-bottom: 0.5rem;
+	font-weight: 500;
+	line-height: 1.2;
+}
+h2 {
+	font-size: 2rem;
+}
 .container {
 	width: 100%;
-	padding-right: 10px;
-	padding-left: 10px;
+	padding-right: 20px;
+	padding-left: 20px;
 	margin-right: auto;
 	margin-left: auto;
 }
