--- a/src/component/Cssmag2.css
+++ b/src/component/Cssmag2.css
@@ -6,7 +6,7 @@
 }
 h2 {
 	margin-top: 0%;
-	margin-bottom: 0rem;
+	margin-bottom: 0.5rem;
 }
 button {
 	border-radius: 0;
@@ -41,11 +41,11 @@ button::-moz-focus-inner {
 	border-style: none;
 }
 h2 {
-	margin-bottom: 0rem;
+	margin-bottom: 0,5rem;
 	
 }
 h2 {
-	font-size: 0.0rem;
+	font-size: 2rem;
 }
 .container {
 	width: 100%;
@@ -310,9 +310,9 @@ h2 {
 }
 
 .page .page-content .page-footer {
-	height: 30px;
+	height: 50px;
 	border-top: solid 1px #f4e8d7;
-	font-size: 80%;
+	font-size: 100%;
 	color: #998466;
 }
 .page.--left {
@@ -372,3 +372,8 @@ h2 {
   outline: 0.2rem solid #bd93f9;
 }
 
+img{
+	display: block;
+	margin: 0 auto;
+	
+}
